<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearAlgebraFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/linearDescriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDescription"
        android:layout_marginStart="@dimen/marginDescription"
        android:fontFamily="sans-serif-black"
        android:text="@string/linear_algebra"
        android:textAlignment="center"
        android:textSize="@dimen/textSizeTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linearDescription2ID"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_margin="@dimen/marginDescription"
        android:layout_marginStart="@dimen/marginDescription"
        android:fontFamily="sans-serif-black"
        android:paddingTop="50sp"
        android:text="@string/linear_algebra_description"
        android:textAlignment="viewStart"
        android:textSize="@dimen/textSizeDescription2"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_of_linear_algebra"
        android:src="@drawable/linearalgebra" />


</FrameLayout>